# simple-metronome

./: .gitignore  CMakeLists.txt  README.md  button.c  button.h  inputLabel.c  inputLabel.h  main.c  metronome.c  metronome.h  player.c  player.h
